--- a/01-testing-api.ipynb
+++ b/01-testing-api.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -39,6 +39,7 @@
    ],
    "source": [
     "import os\n",
+    "import json\n",
     "\n",
     "# Define the target directory\n",
     "target_directory = (\n",
@@ -56,23 +57,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the libraries\n",
     "from dotenv import load_dotenv\n",
-    "from src.aoai.azure_openai import AzureOpenAIManager\n",
-    "from typing import Dict, Optional\n",
-    "from requests import Response\n",
     "import requests\n",
-    "\n",
-    "from utils.ml_logging import get_logger\n",
-    "\n",
     "# Load environment variables from .env file\n",
-    "load_dotenv()\n",
-    "# Set up logger\n",
-    "logger = get_logger()"
+    "load_dotenv()"
    ]
   },
   {
@@ -91,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -124,13 +128,13 @@
       "            \"index\": 0,\n",
       "            \"logprobs\": null,\n",
       "            \"message\": {\n",
-      "                \"content\": \"Yes, Azure OpenAI does support customer managed keys. Customers have the option to use their own keys for encryption and decryption of their data. This helps ensure that customers have control over their encryption keys for added security and compliance.\",\n",
+      "                \"content\": \"Yes, Azure OpenAI does support customer managed keys for encryption and data protection. This means that customers have the ability to manage their own encryption keys for added security and control over their data. This feature allows customers to encrypt and decrypt their data using keys that they manage and control.\",\n",
       "                \"role\": \"assistant\"\n",
       "            }\n",
       "        }\n",
       "    ],\n",
-      "    \"created\": 1714350193,\n",
-      "    \"id\": \"chatcmpl-9J95VH5XmOTULzZnCEDxdLExwvSXm\",\n",
+      "    \"created\": 1714365476,\n",
+      "    \"id\": \"chatcmpl-9JD40beGwiTiSSoPsbEyJ2dQX1LPl\",\n",
       "    \"model\": \"gpt-35-turbo\",\n",
       "    \"object\": \"chat.completion\",\n",
       "    \"prompt_filter_results\": [\n",
@@ -158,20 +162,18 @@
       "    ],\n",
       "    \"system_fingerprint\": \"fp_2f57f81c11\",\n",
       "    \"usage\": {\n",
-      "        \"completion_tokens\": 45,\n",
+      "        \"completion_tokens\": 56,\n",
       "        \"prompt_tokens\": 26,\n",
-      "        \"total_tokens\": 71\n",
+      "        \"total_tokens\": 82\n",
       "    }\n",
       "}\n",
-      "{'Cache-Control': 'no-cache, must-revalidate', 'Content-Length': '1060', 'Content-Type': 'application/json', 'access-control-allow-origin': '*', 'cmp-upstream-response-duration': '399', 'apim-request-id': '3d8ec27c-5ae4-4c6b-be55-dc0dd6af198b', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'x-ms-region': 'West US', 'x-ratelimit-remaining-requests': '0', 'x-ratelimit-remaining-tokens': '758', 'x-accel-buffering': 'no', 'x-ms-rai-invoked': 'true', 'x-request-id': '79322000-d378-4add-955d-003bc81ef7d5', 'x-ms-client-request-id': 'Not-Set', 'azureml-model-session': 'd068-20240402232115', 'Date': 'Mon, 29 Apr 2024 00:23:13 GMT'}\n"
+      "{'Cache-Control': 'no-cache, must-revalidate', 'Content-Length': '1126', 'Content-Type': 'application/json', 'access-control-allow-origin': '*', 'cmp-upstream-response-duration': '489', 'apim-request-id': '46303527-a4a1-4132-bfbc-7854a1b91ddb', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'x-ms-region': 'West US', 'x-ratelimit-remaining-requests': '0', 'x-ratelimit-remaining-tokens': '758', 'x-accel-buffering': 'no', 'x-ms-rai-invoked': 'true', 'x-request-id': 'b953fae3-8ae1-4a92-b19e-d68352ed1b3c', 'x-ms-client-request-id': 'Not-Set', 'azureml-model-session': 'd068-20240402232115', 'Date': 'Mon, 29 Apr 2024 04:37:56 GMT'}\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
-    "import json\n",
-    "\n",
-    "url = \"https://apim-u7u7wvy47ygse.azure-api.net/openai/deployments/gpt-35-turbo/chat/completions?api-version=2024-03-01-preview\"\n",
+    "url = os.getenv(\"URL\")\n",
+    "key = os.getenv(\"KEY\")\n",
     "\n",
     "headers = {\n",
     "    \"Content-Type\": \"application/json\",\n",
