--- a/01-testing-api.ipynb
+++ b/01-testing-api.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "# Define the target directory\n",
     "target_directory = (\n",
-    "    r\"C:\\Users\\pablosal\\Desktop\\gbbai-azure-aoai-faq\"  # change your directory here\n",
+    "    r\"C:\\Users\\pablosal\\Desktop\\\"  # change your directory here\n",
     ")\n",
     "\n",
     "# Check if the directory exists\n",
