--- a/01-testing-api.ipynb
+++ b/01-testing-api.ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory changed to C:\\Users\\pablosal\\Desktop\\gbbai-azure-aoai-faq\n"
+      "Directory changed to C:\\Users\\pablosal\\Desktop\\gbbai-azure-openai-in-production\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "\n",
     "# Define the target directory\n",
     "target_directory = (\n",
-    "    r\"C:\\Users\\pablosal\\Desktop\\\"  # change your directory here\n",
+    "    r\"C:\\Users\\pablosal\\Desktop\\gbbai-azure-openai-in-production\"\n",
     ")\n",
     "\n",
     "# Check if the directory exists\n",
@@ -74,7 +74,6 @@
    "source": [
     "# Import the libraries\n",
     "from dotenv import load_dotenv\n",
-    "import requests\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()"
    ]
@@ -95,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x-ms-region: UK South\n",
+      "x-ms-region: West US\n",
       "{\n",
       "    \"choices\": [\n",
       "        {\n",
@@ -128,13 +127,13 @@
       "            \"index\": 0,\n",
       "            \"logprobs\": null,\n",
       "            \"message\": {\n",
-      "                \"content\": \"As of my last update, Azure OpenAI does not support customer managed keys. However, it's a good idea to check the official documentation or contact Azure support for the most current information.\",\n",
+      "                \"content\": \"Yes, Azure OpenAI supports customer managed keys. This means that you can use your own keys to encrypt and decrypt your data in Azure OpenAI. By using customer managed keys, you have more control over the security and access to your data.\",\n",
       "                \"role\": \"assistant\"\n",
       "            }\n",
       "        }\n",
       "    ],\n",
-      "    \"created\": 1714370065,\n",
-      "    \"id\": \"chatcmpl-9JEG1C0D9qUVEtIWpH5xy3swo88nu\",\n",
+      "    \"created\": 1714405922,\n",
+      "    \"id\": \"chatcmpl-9JNaMRkc9KftkDmYrkkgWvOd5W2gh\",\n",
       "    \"model\": \"gpt-35-turbo\",\n",
       "    \"object\": \"chat.completion\",\n",
       "    \"prompt_filter_results\": [\n",
@@ -162,13 +161,13 @@
       "    ],\n",
       "    \"system_fingerprint\": \"fp_2f57f81c11\",\n",
       "    \"usage\": {\n",
-      "        \"completion_tokens\": 38,\n",
+      "        \"completion_tokens\": 49,\n",
       "        \"prompt_tokens\": 26,\n",
-      "        \"total_tokens\": 64\n",
+      "        \"total_tokens\": 75\n",
       "    }\n",
       "}\n",
-      "{'Cache-Control': 'no-cache, must-revalidate', 'Content-Length': '1001', 'Content-Type': 'application/json', 'access-control-allow-origin': '*', 'cmp-upstream-response-duration': '396', 'apim-request-id': '7201796e-647f-4102-8b68-1b7cf3573f83', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'x-ms-region': 'UK South', 'x-ratelimit-remaining-requests': '0', 'x-ratelimit-remaining-tokens': '879', 'x-accel-buffering': 'no', 'x-ms-rai-invoked': 'true', 'x-request-id': '0496c954-f483-40be-9bd8-5da5ea56e79f', 'x-ms-client-request-id': 'Not-Set', 'azureml-model-session': 'd026-20240416194900', 'Date': 'Mon, 29 Apr 2024 05:54:25 GMT'}\n",
-      "x-ms-region: UK South\n"
+      "{'Cache-Control': 'no-cache, must-revalidate', 'Content-Length': '1044', 'Content-Type': 'application/json', 'access-control-allow-origin': '*', 'cmp-upstream-response-duration': '544', 'apim-request-id': 'f8231bd4-7f43-4f70-a116-3d2609f61f0a', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'x-ms-region': 'West US', 'x-ratelimit-remaining-requests': '0', 'x-ratelimit-remaining-tokens': '879', 'x-accel-buffering': 'no', 'x-ms-rai-invoked': 'true', 'x-request-id': '5520a6a3-bea0-41e1-ad2f-3acc291184bb', 'x-ms-client-request-id': 'Not-Set', 'azureml-model-session': 'd067-20240402224223', 'Date': 'Mon, 29 Apr 2024 15:52:02 GMT'}\n",
+      "x-ms-region: West US\n"
      ]
     }
    ],
@@ -176,8 +175,8 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "url = os.getenv(\"URL\")\n",
-    "key = os.getenv(\"KEY\")\n",
+    "url = os.getenv(\"APIM_OPENAI_ENDPOINT_RB\")\n",
+    "key = os.getenv(\"APIM_API_KEY_RB\")\n",
     "\n",
     "headers = {\n",
     "    \"Content-Type\": \"application/json\",\n",
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,15 +236,8 @@
     "    azure_endpoint=\"https://aoai-load-balancing-003-eastus.azure-api.net\",\n",
     "    api_key=\"341762c33c874c37b02a6f0d58a406a9\",\n",
     "    api_version=\"2023-12-01-preview\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"gpt-35-turbo\",\n",
     "    messages=[\n",
@@ -257,7 +249,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatCompletion(id='chatcmpl-9JNaUDmerOzrnpAXudyxfwHSpV3np', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Yes, Azure OpenAI supports customer managed keys. With customer managed keys, you can bring your own encryption keys and manage their lifecycle. This ensures that you have complete control over your data and can enforce your own security policies. By default, Azure OpenAI uses Microsoft-managed keys, but you can choose to use customer managed keys for added security and compliance.', role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1714405930, model='gpt-35-turbo', object='chat.completion', system_fingerprint=None, usage=CompletionUsage(completion_tokens=72, prompt_tokens=26, total_tokens=98), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = os.getenv(\"APIM_OPENAI_ENDPOINT_SB\")\n",
+    "key = os.getenv(\"APIM_API_KEY_SB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -265,26 +287,26 @@
      "output_type": "stream",
      "text": [
       "x-ms-region: Canada East\n",
-      "{'choices': [{'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}, 'finish_reason': 'stop', 'index': 0, 'message': {'content': 'Yes, Azure OpenAI supports customer-managed keys for API security to provide customers with greater control and security over their data and resources. You can use Azure Key Vault to manage and control the encryption keys and secrets used for accessing the OpenAI API.', 'role': 'assistant'}}], 'created': 1714369974, 'id': 'chatcmpl-9JEEYbX9UWL8WdVvWhWKRXdgQJ9Mi', 'model': 'gpt-35-turbo', 'object': 'chat.completion', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'system_fingerprint': 'fp_2f57f81c11', 'usage': {'completion_tokens': 50, 'prompt_tokens': 26, 'total_tokens': 76}}\n",
+      "{'choices': [{'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}, 'finish_reason': 'stop', 'index': 0, 'message': {'content': 'Yes, Azure OpenAI supports customer managed keys. You can use Azure Key Vault to manage and control access to the keys used to encrypt your data and use it for authorization purposes.', 'role': 'assistant'}}], 'created': 1714405954, 'id': 'chatcmpl-9JNasIsDRgZtRIIDcuyKuflwaevfD', 'model': 'gpt-35-turbo', 'object': 'chat.completion', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'system_fingerprint': 'fp_2f57f81c11', 'usage': {'completion_tokens': 36, 'prompt_tokens': 26, 'total_tokens': 62}}\n",
       "Cache-Control: no-cache, must-revalidate\n",
-      "Content-Length: 1058\n",
+      "Content-Length: 973\n",
       "Content-Type: application/json\n",
       "access-control-allow-origin: *\n",
-      "cmp-upstream-response-duration: 459\n",
-      "apim-request-id: fd3400ac-5d95-4533-9179-c58e65f058e8\n",
+      "cmp-upstream-response-duration: 394\n",
+      "apim-request-id: fc51c5db-65c9-4524-b225-252d3bd27831\n",
       "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload\n",
       "x-content-type-options: nosniff\n",
       "x-ms-region: Canada East\n",
-      "x-ratelimit-remaining-requests: 15\n",
-      "x-ratelimit-remaining-tokens: 8129\n",
+      "x-ratelimit-remaining-requests: 18\n",
+      "x-ratelimit-remaining-tokens: 17979\n",
       "x-accel-buffering: no\n",
       "x-ms-rai-invoked: true\n",
-      "x-request-id: 3a0f53ec-1a51-424b-b1dc-b87efb6b7b33\n",
+      "x-request-id: b858384f-cbc4-474d-bd04-5da7edb0ae62\n",
       "x-ms-client-request-id: Not-Set\n",
-      "azureml-model-session: d039-20240327125535\n",
+      "azureml-model-session: d038-20240327121548\n",
       "x-openai-backendurl: https://dev-aoai-aoai-canadaeast.openai.azure.com//openai\n",
       "Request-Context: appId=cid-v1:b3b59a42-6101-44c9-b08e-f094c79dcfca\n",
-      "Date: Mon, 29 Apr 2024 05:52:54 GMT\n"
+      "Date: Mon, 29 Apr 2024 15:52:34 GMT\n"
      ]
     }
    ],
@@ -292,8 +314,8 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "url = os.getenv(\"URL_SB\")\n",
-    "key = os.getenv(\"KEY_SB\")\n",
+    "url = os.getenv(\"APIM_OPENAI_ENDPOINT_SB\")\n",
+    "key = os.getenv(\"APIM_API_KEY_SB\")\n",
     "\n",
     "headers = {\n",
     "    \"Content-Type\": \"application/json\",\n",
