--- a/01-testing-apis.ipynb
+++ b/01-testing-apis.ipynb
@@ -6,22 +6,7 @@
    "source": [
     "## 📚 Prerequisites\n",
     "\n",
-    "Ensure that your Azure Services are properly set up, your Conda environment is created, and your environment variables are configured as per the instructions in the [SETTINGS.md](SETTINGS.md) file.\n",
-    "\n",
-    "## 📋 Table of Contents\n",
-    "\n",
-    "This notebook assists in testing and retrieving the headers of Azure OpenAI, covering the following sections:\n",
-    "\n",
-    "1. [**Setting Up Azure OpenAI Client**](#setting-up-azure-openai-client): Outlines the process of initializing the Azure OpenAI client.\n",
-    "\n",
-    "2. [**Calling Azure OpenAI API**](#calling-azure-openai-api): Discusses how to make API calls to Azure OpenAI.\n",
-    "\n",
-    "3. [**Extracting Headers and Payload Metadata**](#extracting-headers-and-payload-metadata): Explores how to extract headers and payload metadata from the API response.\n",
-    "\n",
-    "4. [**Analyzing Rate Limit Info**](#analyzing-rate-limit-info): Details the steps to analyze the rate limit information from the API response.\n",
-    "\n",
-    "For additional information, refer to the following resources:\n",
-    "- [AOAI API Documentation](https://learn.microsoft.com/en-us/azure/ai-services/openai/reference)"
+    "Ensure that your Azure Services are properly set up, your Conda environment is created, and your environment variables are configured as per the instructions in the [SETTINGS.md](SETTINGS.md) file.\n"
    ]
   },
   {
